@@ -1,7 +1,7 @@
 <?php
 // vim: foldmethod=marker
 /**
- *  Ethna_SmartyPlugin_modifier_select_Test.php
+ *  Ethna_Plugin_Smarty_modifier_select_Test.php
  *
  *  @author     Yoshinari Takaoka <takaoka@beatcraft.com>
  *  @version    $Id$
@@ -9,13 +9,13 @@
 
 require_once ETHNA_BASE . '/class/Plugin/Smarty/modifier.select.php';
 
-//{{{    Ethna_SmartyPlugin_modifier_select_Test.php
+//{{{    Ethna_Plugin_Smarty_modifier_select_Test.php
 /**
- *  Test Case For Ethna_SmartyPlugin.php
+ *  Test Case For modifier.select.php
  *
  *  @access public
  */
-class Ethna_SmartyPlugin_modifier_select_Test extends Ethna_UnitTestBase
+class Ethna_Plugin_Smarty_modifier_select_Test extends Ethna_UnitTestBase
 {
     // {{{ test_smarty_modifier_select
     function test_smarty_modifier_select()
